# ydayer-test-pypi

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
src/dummy_pkg/: dummy_module.py
