# SPDX-FileCopyrightText: Copyright © Idiap Research Institute <contact@idiap.ch>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ydayer-test-pypi"
version = "1.0.0-post1"
license = {file = "LICENSES/MIT.txt"}
authors = [
    { name = "Yannick Dayer", email = "yannick.dayer@idiap.ch" },
]
description = "Test project to ensure the PyPI upload works."
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
]

[project.urls]
Source = "https://github.com/Yannick-Dayer/ydayer-test-pypi"

[tool.flit.module]
name = "dummy_pkg"
